# pico-samples

./: .gitignore  CMakeLists.txt  README.md
dma/: CMakeLists.txt  README.md  dma.c
uarts/: CMakeLists.txt  README.md  clean.sh  flash-pico.sh  uarts.c
